--- a/RVC_CLI.ipynb
+++ b/RVC_CLI.ipynb
@@ -67,8 +67,8 @@
       "outputs": [],
       "source": [
         "# @title Clone\n",
-        "!git clone https://github.com/blaise-tk/RVC_CLI\n",
-        "%cd /content/RVC_CLI"
+        "!git clone https://github.com/TheNeoDev/testrvc\n",
+        "%cd /content/testrvc"
       ]
     },
     {
